samples/_failures_safe/1761467308_14c829_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_06e4a291.c: In function ‘main’:
./samples/SAFE/__tmp_06e4a291.c:139:13: error: expected identifier at end of input
  139 |             printf("[%s] %-8s: %s\n", entries[i].timestamp, level_to_string(entries[i].level), entries[i].
      |             ^~~~~~
./samples/SAFE/__tmp_06e4a291.c:139:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_06e4a291.c:139:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_06e4a291.c:139:13: error: expected declaration or statement at end of input
